<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    tools:context=".ui.main.movies.MoviesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_error"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                app:lottie_autoPlay="true"
                app:lottie_fileName="38213-error.json" />

            <TextView
                android:id="@+id/text_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/text_trending_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/trending_today"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_trending_today_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trending_movies_today_desc" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_loading_trending_today"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="70381-loading-abstract.json"
                app:lottie_loop="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_movies_trending_today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/text_trending_weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/trending_weekly"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_trending_weekly_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trending_movies_weekly_desc" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_loading_trending_weekly"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="70381-loading-abstract.json"
                app:lottie_loop="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_movies_trending_weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>