...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lottie_swipe_indicator">

            <ImageView
                android:id="@+id/image_tv_poster"
                android:layout_width="130dp"
                android:layout_height="195dp"
                android:layout_margin="16dp"
                android:transitionName="posterIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/example_movie_name"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_tv_poster"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_first_air_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/example_first_air_duration"
                app:layout_constraintEnd_toEndOf="@+id/text_tv_title"
                app:layout_constraintStart_toStartOf="@+id/text_tv_title"
                app:layout_constraintTop_toBottomOf="@+id/text_tv_title" />
...
